# LL_kcaH

./: .gitignore  CMakeLists.txt  README.md  cmd.sh
.cargo/: config
HackerRank/: .gitignore  CMakeLists.txt
HackerRank/HR_AbstractClassesPolymorphism/: hr_abstract_classes_polymorphism.cpp
HackerRank/HR_BasicDataTypes/: hr_basic_data_types.cpp
HackerRank/HR_ExceptionalServer/: hr_exceptional_server.cpp
HackerRank/HR_InheritedCode/: hr_inherited_code.cpp
HackerRank/HR_InputOutput/: hr_input_output.cpp
HackerRank/HR_VirtualFunctions/: hr_virtual_functions.cpp
LaRouille/: CMakeLists.txt
LaRouille/rusty_adder/: rusty_adder.c
LaRouille/rusty_common/: .gitignore  Cargo.toml
LaRouille/rusty_common/guessing_game/: Cargo.toml
LaRouille/rusty_common/guessing_game/src/: lib.rs
LaRouille/rusty_common/rust_math/: Cargo.toml
LaRouille/rusty_common/rust_math/src/: lib.rs
LaRouille/rusty_common/src/: lib.rs
LaRouille/rusty_guess/: rusty_guess.c
LearnC/: .cproject  .project  CMakeLists.txt  valgrind.sh
LearnC/ex1/: Makefile  ex1  ex1.c
LearnC/ex10/: Makefile  ex10  ex10.c
LearnC/ex11/: Makefile  ex11  ex11.c
LearnC/ex12/: Makefile  ex12  ex12.c
LearnC/ex13/: Makefile  ex13  ex13.c
LearnC/ex14/: .gitignore  Makefile  ex14  ex14.c
LearnC/ex15/: ex15  ex15.c
LearnC/ex16/: ex16  ex16.c
LearnC/ex17/: Makefile  ex17  ex17.c
LearnC/ex18/: Makefile  ex18  ex18.c
LearnC/ex19/: ex19  ex19.c  ex19.h  object.c  object.h
LearnC/ex20/: dbg.h
LearnC/ex3/: ex3.c
LearnC/ex4/: ex4.c
LearnC/ex5/: ex5.c
LearnC/ex6/: ex6.c
LearnC/ex7/: ex7.c
LearnC/ex8/: Makefile  ex8.c
LearnC/ex9/: ex9.c
Tinkering/: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile
Tinkering/TkAbseil/: main.cpp
Tinkering/TkFmt/: main.cpp
Tinkering/TkHttplib/: main.cpp
Tinkering/TkTorchMnist/: main.cpp
TourCpp2/: CMakeLists.txt
TourCpp2/CommunicatingTasks/: com_tasks.cpp
TourCpp2/Structures/: structs_study.cpp
ZigLearn/: .dir-locals.el
ZigLearn/chp0/: hello.zig
ZigLearn/chp1/: test_patterns.zig
cmake/: utilities.cmake
kcah2ing/: .gitignore  CMakeLists.txt  Makefile  README.md  build.zig
kcah2ing/firstprog/: .gitignore  Makefile  firstprog.c  hello.pl
kcah2ing/formatstrings/: .gitignore  Makefile  fmt_strings.c  input.c
kcah2ing/memorylocations/: .gitignore  Makefile  addressof.c  addressof2.c  pointer.c
kcah2ing/signedunsignedlongshort/: datatype_sizes.c
kcah2ing/strings/: .gitignore  Makefile  char_array.c  char_array2.c
kcah2ing/typecasting/: .dir-locals.el  .gitignore  Makefile  pointer_types  pointer_types.c  typecasting.c
